allow users to see a single playlist

--- a/templates/playlists_new.html
+++ b/templates/playlists_new.html
@@ -31,6 +31,18 @@
             </p>
             <textarea id='playlist-videos' name='videos' rows='10'></textarea>
         </p>
+        <!-- Ratings(Drop Down Menu)-->
+        <p>
+            <label for='ratings'> Rating:  </label>
+            <br>
+            <select name='rating'>
+                <option value= ' &#9733;' > &#9733;</option>
+                <option value= ' &#9733; &#9733;' > &#9733; &#9733; </option>
+                <option value= ' &#9733; &#9733; &#9733;' > &#9733; &#9733; &#9733;</option>
+                <option value= ' &#9733; &#9733; &#9733; &#9733;' > &#9733; &#9733; &#9733; &#9733;</option>
+                <option value= ' &#9733; &#9733; &#9733; &#9733; &#9733;' > &#9733; &#9733; &#9733; &#9733; &#9733;</option>
+            </select>
+        </p>
     </fieldset>
     <!-- Button -->
     <p>
