--- a/templates/playlists_show.html
+++ b/templates/playlists_show.html
@@ -1,13 +1,18 @@
-<!-- templates/playlists_show.html-->
+<!-- templates/playlists_show.html -->
 {% extends 'base.html' %}
 
 {% block content %}
-<a href='/'> Back to Home</a>
+<a href='/'>Back to Home</a>
+
 <h1>{{ playlist.title }}</h1>
 <h2>{{ playlist.description }}</h2>
+<h3>Rating: {{ playlist.rating }} </h3>
+
 
 {% for video in playlist.videos %}
     <iframe width='420' height='315' src='{{ video }}'></iframe>
 {% endfor %}
 
+<!-- Route to edit a playlist -->
+<p><a href='/playlists/{{ playlist._id }}/edit'>Edit</a></p>
 {% endblock %}
