add reset changes button

--- a/templates/partials/playlists_form.html
+++ b/templates/partials/playlists_form.html
@@ -46,3 +46,6 @@ Value - Pass in values of playlist we want to edit -->
     <p>
         <button type='submit'>Save Playlist</button>
     </p>
+    <p>
+        <button type='reset'>Reset Changes</button>
+    </p>
