--- a/templates/playlists_index.html
+++ b/templates/playlists_index.html
@@ -2,14 +2,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Playlists</h1>
-    <!-- Reference to route: /playlists/new-->
-    <a href='/playlists/new'>New Playlist</a>
+<h1>Playlists</h1>
 
+<div class='row'>
     {% for playlist in playlists %}
-        <h2><a href='/playlists/{{ playlist._id }}'>{{ playlist.title }}</a></h2>
-        <small>{{ playlist.description }}</small>
-        <small> Rating:{{playlist.rating}}</small>
-
+        <div class='col-md-3 card'>
+            <h2 class='card-title'><a href='/playlists/{{ playlist._id }}'>{{ playlist.title }}</a></h2>
+            <small class='card-text'>{{ playlist.description }}</small>
+        </div>
     {% endfor %}
+</div>
 {% endblock %}
