--- a/templates/playlists_show.html
+++ b/templates/playlists_show.html
@@ -3,23 +3,22 @@
 
 {% block content %}
 <a href='/'>Back to Home</a>
-
-<h1>{{ playlist.title }}</h1>
-<h2>{{ playlist.description }}</h2>
-<h3>Rating: {{ playlist.rating }} </h3>
-
-
-{% for video in playlist.videos %}
-    <iframe width='420' height='315' src='{{ video }}'></iframe>
-{% endfor %}
-
-<!-- Route to edit a playlist -->
-<p><a href='/playlists/{{ playlist._id }}/edit'>Edit</a></p>
-
-<!-- Creates a delete button Delete button -->
-<p>
-    <form method='POST' action='/playlists/{{ playlist._id }}/delete'>
-        <button type='submit'>Delete</button>
-    </form>
-</p>
+<div class='row'>
+    <div class='col-sm-6 col-sm-offset-3'>
+        <h1>{{ playlist.title }}</h1>
+        <h2>{{ playlist.description }}</h2>
+        <h3>Rating: {{ playlist.rating }}</h3>
+        {% for video in playlist.videos %}
+            <div class="card"><div class="card-body">
+                <iframe width="420" height="315" src="{{ video }}"></iframe>
+            </div></div>
+        {% endfor %}
+        <!-- Route to edit a playlist -->
+        <p><a href='/playlists/{{ playlist._id }}/edit'>Edit</a></p>
+        <p><form method='POST' action='/playlists/{{ playlist._id }}/delete'>
+            <input type='hidden' name='_method' value='DELETE'>
+            <button class='btn btn-primary' type='submit'>Delete</button>
+        </form></p>
+    </div>
+</div>
 {% endblock %}
